--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "io.kimo.konami"
-        minSdkVersion 14
+        minSdkVersion 24
         targetSdkVersion 29
         versionCode 2
         versionName "1.0.1"
@@ -23,4 +23,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation project(':library')
+
+    // Material Design
+    implementation 'com.google.android.material:material:1.2.0-alpha05'
 }
